@@ -521,7 +521,7 @@ public class CustomExpression implements Cloneable {
 	 * Used for temporary substitution when evaluating index and range expressions.
 	 */
 	public String hash() {
-		Integer hashint = new Integer(this.getExpressionString().hashCode() + symbol.hashCode());
+		Integer hashint = Integer.valueOf(this.getExpressionString().hashCode() + symbol.hashCode());
 		String hash = "$";
 		for (char c : hashint.toString().toCharArray()) {
 			if (c == '-')
